--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ jar {
 
 dependencies {
     implementation('org.telegram:telegrambots:6.9.7.1')
-    implementation("org.glassfish.grizzly:grizzly-http:2.4.5")
+    implementation("org.glassfish.jersey.containers:jersey-container-grizzly2-http:3.1.10")
     implementation("commons-codec:commons-codec:1.18.0")
 
     implementation("org.apache.commons:commons-lang3:3.17.0")
